[ViewToolsTest - Develop] 1. 修正設定 ContainerView 的上下間距

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 ViewToolsProject.xcodeproj/project.xcworkspace/xcshareddata/ViewToolsProject.xccheckout
 ViewToolsProject.xcodeproj/project.xcworkspace/xcuserdata/coodychou.xcuserdatad/UserInterfaceState.xcuserstate
 ViewToolsProject.xcodeproj/xcuserdata/coodychou.xcuserdatad/xcschemes/ViewToolsProject.xcscheme
+Breakpoints_v2.xcbkptlist
